--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clube de Tênis de Mesa</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="auth-links">
-      <h1>Voce está logado!</h1>
-        <a href="login.html" class="login-link">Login</a>
-        <span class="divider">|</span>
-        <a href="register.html" class="register-link">Register</a>
-    </div>
+    <header>
+        <nav>
+            <a href="/" onclick="route()">Início</a>
+            <a href="/ranking" onclick="route()">Ranking</a>
+            <a href="/torneios" onclick="route()">Torneios</a>
+        </nav>
+    </header>
+
+    <main id="app">
+        </main>
+
     <script src="app.js"></script>
 </body>
 </html>
