--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <a href="/" onclick="route()">Início</a>
-            <a href="/ranking" onclick="route()">Ranking</a>
-            <a href="/torneios" onclick="route()">Torneios</a>
+            <a href="/" onclick="route(event)">Início</a>
+            <a href="/ranking" onclick="route(event)">Ranking</a>
+            <a href="/torneios" onclick="route(event)">Torneios</a>
         </nav>
     </header>
 
