--- a/users/index.html
+++ b/users/index.html
@@ -13,8 +13,7 @@
         </div>
     </header>
 
-    <main id="app">
-        </main>
+    <main id="app"></main>
 
     <script src="ger_users.js"></script>
 </body>
