--- a/404.html
+++ b/404.html
@@ -1,2 +1,23 @@
-<h1>Bem-vindo ao Clube!</h1>
-<p>Esta é a página inicial da nossa aplicação de Tênis de Mesa.</p>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clube de Tênis de Mesa</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="/" onclick="route(event)">Início</a>
+            <a href="/ranking" onclick="route(event)">Ranking</a>
+            <a href="/torneios" onclick="route(event)">Torneios</a>
+        </nav>
+    </header>
+
+    <main id="app">
+        </main>
+
+    <script src="app.js"></script>
+</body>
+</html>
