--- a/chaveamento.html
+++ b/chaveamento.html
@@ -35,7 +35,7 @@
   <script>
     const torneioId = 9; // Altere conforme necessário
 
-    fetch("https://testebackend.fly.dev/chaveamento", {
+    fetch("https://testesitebackend.fly.dev/chaveamento", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
