--- a/chaveamento.html
+++ b/chaveamento.html
@@ -36,7 +36,7 @@
     const torneioId = 9; // Altere conforme necessário
 
     fetch("https://testesitebackend.fly.dev/chaveamento", {
-      method: "POST",
+      method: "GET",
       headers: {
         "Content-Type": "application/json"
       },
