--- a/chaveamento.html
+++ b/chaveamento.html
@@ -35,12 +35,11 @@
   <script>
     const torneioId = 9; // Altere conforme necessário
 
-    fetch("https://testesitebackend.fly.dev/chaveamento", {
-      method: "GET",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ torneioId })
+    fetch(`https://testesitebackend.fly.dev/chaveamento?torneioId=${torneioId}`, {
+        method: "GET",
+        headers: {
+            "Content-Type": "application/json"
+        }
     })
     .then(res => {
       if (!res.ok) throw new Error("Erro HTTP " + res.status);
