css + pequenas login/register fix

--- a/login/index.html
+++ b/login/index.html
@@ -18,7 +18,7 @@
 
   <p id="resultado"></p>
 
-  <a href="register.html">Ainda não é cadastrado? Registre-se</a>
+  <a href="/register/">Ainda não é cadastrado? Registre-se</a>
 
   <script src="login.js"></script>
 </body>
