--- a/register/index.html
+++ b/register/index.html
@@ -18,7 +18,7 @@
 
   <p id="resultado"></p>
 
-  <a href="login.html">Já é cadastrado? Faça login</a>
+  <a href="/login/">Já é cadastrado? Faça login</a>
 
   <script src="register.js"></script>
 </body>
