login/register fix

--- a/login/index.html
+++ b/login/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>Login</h2>
@@ -18,7 +19,7 @@
 
   <p id="resultado"></p>
 
-  <a href="/register/">Ainda não é cadastrado? Registre-se</a>
+  <a href="/my-site/register/">Ainda não é cadastrado? Registre-se</a>
 
   <script src="login.js"></script>
 </body>
