--- a/register/index.html
+++ b/register/index.html
@@ -2,10 +2,11 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Register</title>
+  <title>Registrar</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Register</h2>
+  <h2>Registre-se</h2>
   <form id="registerForm">
     <label>Usuário:</label><br />
     <input type="text" id="username" /><br /><br />
@@ -13,12 +14,12 @@
     <label>Senha:</label><br />
     <input type="password" id="password" /><br /><br />
     
-    <button type="submit">Entrar</button>
+    <button type="submit">Registrar-se</button>
   </form>
 
   <p id="resultado"></p>
 
-  <a href="/login/">Já é cadastrado? Faça login</a>
+  <a href="/my-site/login/">Já é cadastrado? Faça login</a>
 
   <script src="register.js"></script>
 </body>
