--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <a href="/ranking" onclick="route(event)">Ranking</a>
             <a href="/torneios" onclick="route(event)">Torneios</a>
         </nav>
+        <button id="menu-toggle" class="menu-toggle" aria-label="Abrir menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
     </header>
 
     <main id="app">
