--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <main id="app">
         </main>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
