--- a/pages/torneios.html
+++ b/pages/torneios.html
@@ -1,2 +1,12 @@
 <h1>Torneios</h1>
-<main class="torneios"></main>
+<main class="torneios">
+    <template class="torneio-template">
+        <div class="torneio">
+            <h2 class="torneio-nome"></h2>
+            <p>Data: <span class="torneio-data"></span></p>
+            <p>Horário: <span class="torneio-horario"></span></p>
+            <p>ID: <span class="torneio-id"></span></p>
+            <button class="registrar"></button>
+        </div>
+    </template>
+</main>
