--- a/pages/torneios.html
+++ b/pages/torneios.html
@@ -1,6 +1,6 @@
 <h1>Torneios</h1>
 <main class="torneios"></main>
-<template class="torneio-template">
+<template id="torneio-template">
     <div class="torneio">
         <h2 class="torneio-nome"></h2>
         <p>Data: <span class="torneio-data"></span></p>
