--- a/pages/torneios.html
+++ b/pages/torneios.html
@@ -6,6 +6,6 @@
         <p>Data: <span class="torneio-data"></span></p>
         <p>Horário: <span class="torneio-horario"></span></p>
         <p>ID: <span class="torneio-id"></span></p>
-        <button class="registrar"></button>
+        <button class="registrar-button"></button>
     </div>
 </template>
