--- a/pages/gerTorneios.html
+++ b/pages/gerTorneios.html
@@ -1,2 +1,10 @@
 <h1>Gerenciar Torneios</h1>
 <main class="gerTorneios"></main>
+<template id="gerTorneios-template">
+    <div class="torneio">
+        <h2><span class="torneio-nome"></span></h2>
+        <p><span class="torneio-data"></span></p>
+        <p><span class="torneio-horario"></span></p>
+        <button class="gerenciar-button">Gerenciar</button>
+    </div>
+</template>
