--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -1,2 +1,5 @@
 <h1>Ranking de Jogadores</h1>
 <main class="ranking"></main>
+<template id="ranking-template">
+    <div class="rank"></div>
+</template>
