--- a/pages/users.html
+++ b/pages/users.html
@@ -1,2 +1,7 @@
 <h2>👥 Usuários</h2>
 <main class="users"></main>
+<template id="users-template">
+    <div class="user">
+        <button class="botao-gerenciar">Gerenciar</button>
+    </div>
+</template>
